# amiga-project-template

./: CMakeLists.txt  CMakeListsVulkan.txt  README.md  configa1000.ini  example  makefile  source.asm
cmake/: CMakeDetermineVASMCompiler.cmake  CMakeTestVASMCompiler.cmake  CMakeVASMCompiler.cmake.in  CMakeVASMInformation.cmake
src/: CMakeLists.txt  source.s
